# stm_encoder

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  STM32F042F4PX_FLASH.ld  encoder_board.cfg  encoder_board.ioc  encoder_board.launch  openocd.cfg
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
Core/Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
User/: angle_poll.c  angle_poll.h  app.c  can_wrapper.c  can_wrapper.h  encoder_com.c  encoder_communication.c  encoder_communication.h
app/include/stm_encoder/: can_wrapper.h  encoder_com.h  main.h
app/src/: angle_poll.c  app.c  can_wrapper.c  encoder_com.c  main.c
lib/: CMakeLists.txt
lib/config/include/FreeRTOS/: FreeRTOSConfig.h
lib/config/include/STM32CubeF0/: stm32f0xx_hal_conf.h
